--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,149 +6,166 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇭🇰_HK_香港
+    name: 🇭🇰_HK_香港_1
     type: vmess
-    server: 103.160.204.63
-    port: 2052
+    server: 103.160.204.87
+    port: 8080
     cipher: auto
-    uuid: 0afb8b2c-149a-49a8-e90f-d77884ac922f
+    uuid: 74a890ab-5c4b-4f35-aea4-5fc2459bebd2
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /blue99
+      path: /blue03
       headers:
         host: ecc.vtcss.top
   - &id002
-    name: 🇯🇵_JP_日本_1
-    type: ss
-    server: 18.183.166.124
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id003
-    name: 🇩🇪_DE_德国
-    type: trojan
-    server: 3.66.95.69
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id004
-    name: 🇯🇵_JP_日本_2
-    type: ss
-    server: 13.114.170.208
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id005
-    name: 🇺🇸_US_美国_1
+    name: 🇭🇰_HK_香港_2
     type: vmess
-    server: 172.64.201.138
+    server: 103.160.204.98
     port: 80
     cipher: auto
-    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
+    uuid: dd41b5cb-b72e-4a8c-c75a-3ecc928d6eb3
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /shirker
+      path: /blue06
       headers:
-        host: dp4.ilovescp.com
-  - &id006
-    name: 🇺🇸_US_美国_2
+        host: ecc.vtcss.top
+  - &id003
+    name: 🇭🇰_HK_香港_3
     type: vmess
-    server: wi.saintink.eu.org
-    port: 443
+    server: 103.160.204.113
+    port: 8080
     cipher: auto
-    uuid: 927094d3-d678-4763-8591-e240d0bcae87
+    uuid: 74a890ab-5c4b-4f35-aea4-5fc2459bebd2
     alterId: 0
-    tls: true
+    tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /vuk2.0bad.com/chat
+      path: /blue03
       headers:
-        host: sub2.saintink.eu.org
+        host: ecc.vtcss.top
+  - &id004
+    name: 🇭🇰_HK_香港_4
+    type: vmess
+    server: 103.160.204.95
+    port: 8080
+    cipher: auto
+    uuid: 74a890ab-5c4b-4f35-aea4-5fc2459bebd2
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue03
+      headers:
+        host: ecc.vtcss.top
+  - &id005
+    name: 🇭🇰_HK_香港_5
+    type: vmess
+    server: 103.160.204.70
+    port: 80
+    cipher: auto
+    uuid: dd41b5cb-b72e-4a8c-c75a-3ecc928d6eb3
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue06
+      headers:
+        host: ecc.vtcss.top
+  - &id006
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: 7.wyhkaa0.gq
+    port: 2095
+    cipher: auto
+    uuid: 2f334fd9-98f6-4995-ba45-bb9a8a28eea2
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /TG:@hkaa0
+      headers:
+        host: 7.wyhkaa0.gq
   - &id007
-    name: 🇫🇷_FR_法国_1
-    type: ss
-    server: 149.202.82.172
-    port: 9101
-    password: e4FCWrgpkji3QY
-    cipher: aes-256-gcm
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 104.21.119.51
+    port: 8080
+    cipher: auto
+    uuid: 74a890ab-5c4b-4f35-aea4-5fc2459bebd2
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue03
+      headers:
+        host: ecc.vtcss.top
   - &id008
-    name: 🇯🇵_JP_日本_3
-    type: ss
-    server: 54.95.169.40
+    name: 🇫🇷_FR_法国
+    type: trojan
+    server: 57.128.173.6
     port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
+    udp: true
+    password: 29f2cf65-f0ee-4a08-83f3-df1beb74d55d
+    sni: www.speedtest.net
+    skip-cert-verify: true
+    network: tcp
   - &id009
     name: 🇺🇸_US_美国_3
     type: vmess
-    server: 172.64.132.22
-    port: 80
+    server: 9.wyhkaa0.gq
+    port: 2095
     cipher: auto
-    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
+    uuid: d838d99a-6806-4be4-c126-7fca613cf6a9
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /shirker
+      path: /TG:@hkaa0
       headers:
-        host: dp4.ilovescp.com
+        host: 9.wyhkaa0.gq
   - &id010
-    name: 🇺🇸_US_美国_4
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国
     type: vmess
-    server: 37.1.211.52
-    port: 3000
+    server: ns1.v2-vip.fun
+    port: 8880
     cipher: auto
-    uuid: b97ad283-287e-4e20-a741-f16f7d074590
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-  - &id011
-    name: 🇫🇷_FR_法国_2
-    type: trojan
-    server: 62.210.188.19
-    port: 443
-    udp: true
-    password: 27181131b8
-    sni: fra1.connecton.surf
-    skip-cert-verify: true
-    network: tcp
-  - &id012
-    name: 🇯🇵_JP_日本_4
-    type: trojan
-    server: 6hkf1.102ctc.xyz
-    port: 32558
-    udp: true
-    password: f7943d8a-9c20-3c6e-b391-bceebb4e6aad
-    sni: 6hkf1.102ctc.xyz
-    skip-cert-verify: true
-    network: tcp
-  - &id013
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: 172.67.27.227
-    port: 80
-    cipher: auto
-    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
+    uuid: 617c9bc4-4116-41c6-99e0-ace49a38fcdb
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /shirker
+      path: /Jnv8ViZOUVgijjOh0p5uGjHnXIiY
       headers:
-        host: dp4.ilovescp.com
-  - &id014
+        host: fr7.tehme100.fun
+  - &id011
+    name: 🇯🇵_JP_日本->🇺🇸_US_美国
+    type: vmess
+    server: cdn.chigua.tk
+    port: 80
+    cipher: auto
+    uuid: 7e7f8398-bd39-49d8-9ce6-e48ffef463dd
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /2TokGE9A/
+      headers:
+        host: us6.cachexy.cf
+  - &id012
     name: 🇭🇰_HK_香港->🇺🇸_US_美国
     type: vmess
     server: 103.160.204.71
@@ -163,55 +180,369 @@ proxies:
       path: /blue
       headers:
         host: tui.vtcss.top
-  - &id015
-    name: 🇫🇷_FR_法国_3
+  - &id013
+    name: 🇺🇸_US_美国_4
     type: trojan
-    server: 52.47.41.227
-    port: 22222
+    server: us3.421421.xyz
+    port: 20230
     udp: true
-    password: telegram-id-directvpn
-    sni: trj.rollingnext.co.uk
+    password: 26af88d0-fc72-43b3-8108-521a7b12aa45
+    sni: 421421.xyz
     skip-cert-verify: true
     network: tcp
+  - &id014
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 104.31.16.58
+    port: 443
+    cipher: auto
+    uuid: E4C92B68-B275-4002-A8CA-682D3172E49B
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /speedtest
+      headers:
+        host: Dusseldorf.kotick.site
+  - &id015
+    name: 🇭🇰_HK_香港_6
+    type: vmess
+    server: 103.160.204.22
+    port: 8080
+    cipher: auto
+    uuid: 74a890ab-5c4b-4f35-aea4-5fc2459bebd2
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue03
+      headers:
+        host: ecc.vtcss.top
   - &id016
+    name: 🇭🇰_HK_香港_7
+    type: vmess
+    server: 103.160.204.28
+    port: 8080
+    cipher: auto
+    uuid: 74a890ab-5c4b-4f35-aea4-5fc2459bebd2
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue03
+      headers:
+        host: ecc.vtcss.top
+  - &id017
     name: 🇺🇸_US_美国_6
     type: vmess
-    server: 67.21.95.73
-    port: 53314
+    server: cdn.twitter.now.cc
+    port: 443
+    cipher: auto
+    uuid: 8d2ba456-2f0d-4c13-b8a0-bff99c679709
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /ikun
+      headers:
+        host: us2.twittei.me
+  - &id018
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: us-01.cloudlion.me
+    port: 2082
+    cipher: auto
+    uuid: 57eee503-a9e3-439c-a0d5-17cebed16b53
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: us-01.cloudlion.me
+  - &id019
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: 104.17.137.141
+    port: 443
+    cipher: auto
+    uuid: 8f74ec8a-971c-11ed-a8fc-0242ac120002
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /d84ee332-1284-11ee-a5c8-8213fd3be4b9
+      headers:
+        host: d84ee332-1284-11ee-a5c8-8213fd3be4b9.bamarambash.monster
+  - &id020
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
+    type: vmess
+    server: ru1.mianfenyun012.eu.org
+    port: 80
+    cipher: auto
+    uuid: c5964a63-d67c-4668-cdae-6443a1581e76
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /jdbp606
+      headers:
+        host: ru1.mianfenyun012.eu.org
+  - &id021
+    name: 🇺🇸_US_美国->🇱🇺_LU_卢森堡
+    type: vmess
+    server: zfc.windowsupdate1.com
+    port: 443
+    cipher: auto
+    uuid: 6abfe33a-1894-4f62-8879-83b71a35e5fd
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: us-1.acyun.tk
+  - &id022
+    name: 🇺🇸_US_美国_9
+    type: ss
+    server: 204.13.153.248
+    port: 38960
+    password: TugBC8yxwf
+    cipher: aes-256-gcm
+  - &id023
+    name: 🇭🇰_HK_香港_8
+    type: vmess
+    server: 103.160.204.223
+    port: 8080
+    cipher: auto
+    uuid: 74a890ab-5c4b-4f35-aea4-5fc2459bebd2
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue03
+      headers:
+        host: ecc.vtcss.top
+  - &id024
+    name: 🇭🇰_HK_香港_9
+    type: vmess
+    server: 103.160.204.65
+    port: 2052
+    cipher: auto
+    uuid: 0afb8b2c-149a-49a8-e90f-d77884ac922f
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue99
+      headers:
+        host: ecc.vtcss.top
+  - &id025
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: 141.101.122.144
+    port: 8080
+    cipher: auto
+    uuid: 74a890ab-5c4b-4f35-aea4-5fc2459bebd2
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue03
+      headers:
+        host: ecc.vtcss.top
+  - &id026
+    name: 🇳🇱_NL_荷兰
+    type: vmess
+    server: 188.114.99.11
+    port: 8080
+    cipher: auto
+    uuid: 74a890ab-5c4b-4f35-aea4-5fc2459bebd2
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue03
+      headers:
+        host: ecc.vtcss.top
+  - &id027
+    name: 🇺🇸_US_美国_11
+    type: vmess
+    server: 172.67.144.232
+    port: 80
+    cipher: auto
+    uuid: 0f8921ec-f691-4e05-aaa2-5d096133b606
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: fhc.shabijichang.com
+  - &id028
+    name: 🇺🇸_US_美国_12
+    type: vmess
+    server: 45.63.106.86
+    port: 37869
+    cipher: auto
+    uuid: 4c90d167-e65b-4419-d455-eb635724d2ed
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id029
+    name: 🇹🇼_TW_台湾
+    type: vmess
+    server: tw1-vds1.anyhk.co
+    port: 443
+    cipher: auto
+    uuid: f76f6fc1-9dc3-4e82-b003-ea1c338a6275
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id030
+    name: 🇺🇸_US_美国_13
+    type: vmess
+    server: dx1.992688.xyz
+    port: 8880
+    cipher: auto
+    uuid: e5f9073b-a23c-487f-b2a8-e5eb6abad21d
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: vcus2.vpn66.eu.org
+  - &id031
+    name: 🇺🇸_US_美国_14
+    type: vmess
+    server: shs.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: df7abf48-196d-4dbd-b981-4d0c4f4bb446
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: shs.shabijichang.com
+  - &id032
+    name: 🇺🇸_US_美国_15
+    type: vmess
+    server: 108.186.208.156
+    port: 443
     cipher: auto
     uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
     alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/173300203323
+      headers:
+        host: www.17661867.xyz
+  - &id033
+    name: 🇺🇸_US_美国_16
+    type: vmess
+    server: 172.64.169.199
+    port: 80
+    cipher: auto
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
+    alterId: 0
     tls: false
     skip-cert-verify: true
-  - &id017
-    name: 🇰🇷_KR_韩国_1
-    type: ss
-    server: 43.201.116.22
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id018
-    name: 🇨🇦_CA_加拿大
+    network: ws
+    ws-opts:
+      path: /shirker
+      headers:
+        host: dp4.scproxy.top
+  - &id034
+    name: 🇺🇸_US_美国->🇸🇬_SG_新加坡
     type: vmess
-    server: dongtaiwang3.com
+    server: vless.wyhkaa0.cf
+    port: 80
+    cipher: auto
+    uuid: 87d0aa5d-09df-4785-d95d-6a0deed473be
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /TG:@hkaa0
+      headers:
+        host: vless.wyhkaa0.cf
+  - &id035
+    name: 🇺🇸_US_美国_17
+    type: vmess
+    server: 45.131.229.54
     port: 443
     cipher: auto
-    uuid: 6deddb7f-e557-42db-bfa0-cf40b36b27e2
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1692530321575
+      headers:
+        host: www.72470068.xyz
+  - &id036
+    name: 🇭🇰_HK_香港_10
+    type: vmess
+    server: 103.160.204.63
+    port: 2052
+    cipher: auto
+    uuid: 0afb8b2c-149a-49a8-e90f-d77884ac922f
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue99
+      headers:
+        host: ecc.vtcss.top
+  - &id037
+    name: 🇷🇺_RU_俄罗斯联邦
+    type: vmess
+    server: 185.59.218.177
+    port: 443
+    cipher: auto
+    uuid: 8f74ec8a-971c-11ed-a8fc-0242ac120002
     alterId: 0
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /dongtaiwang.com
+      path: /72d6d25e-1b39-11ee-a5c8-8213fd3be4b9
       headers:
-        host: d.freeh1.xyz
-  - &id019
-    name: 🇺🇸_US_美国_7
+        host: 72d6d25e-1b39-11ee-a5c8-8213fd3be4b9.bamarambash.monster
+  - &id038
+    name: 🇺🇸_US_美国_18
     type: vmess
-    server: 9.wyhkaa0.gq
+    server: 17.wyhkaa0.gq
     port: 2095
     cipher: auto
-    uuid: d838d99a-6806-4be4-c126-7fca613cf6a9
+    uuid: 1e36655b-7d28-4513-d7f8-5f1a0c00a07d
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -219,161 +550,7 @@ proxies:
     ws-opts:
       path: /TG:@hkaa0
       headers:
-        host: 9.wyhkaa0.gq
-  - &id020
-    name: 🇸🇬_SG_新加坡
-    type: trojan
-    server: 6f1sgtr1.106ctc.buzz
-    port: 50143
-    udp: true
-    password: f7943d8a-9c20-3c6e-b391-bceebb4e6aad
-    sni: 6f1sgtr1.106ctc.buzz
-    skip-cert-verify: true
-    network: tcp
-  - &id021
-    name: 🇬🇧_GB_英国
-    type: trojan
-    server: 18.170.149.165
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id022
-    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国
-    type: vmess
-    server: dongtaiwang2.com
-    port: 443
-    cipher: auto
-    uuid: 25a9f3b9-1e6d-40bd-968b-e0818c1b196f
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /dongtaiwang.com
-      headers:
-        host: 2.freek1.xyz
-  - &id023
-    name: 🇳🇱_NL_荷兰->🇺🇸_US_美国
-    type: vmess
-    server: 188.114.97.152
-    port: 80
-    cipher: auto
-    uuid: 185d6ff9-a0a7-4d39-f3e8-783b7a6bbc79
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /blue
-      headers:
-        host: tui.vtcss.top
-  - &id024
-    name: 🇰🇷_KR_韩国_2
-    type: vmess
-    server: a27.2e5bf271.win
-    port: 80
-    cipher: auto
-    uuid: e1d3ce91-6e90-452c-95cd-7870576adb59
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: a27.2e5bf271.win
-  - &id025
-    name: 🇫🇷_FR_法国_4
-    type: trojan
-    server: fra1.connecton.surf
-    port: 443
-    udp: true
-    password: 27181131b8
-    skip-cert-verify: true
-    network: tcp
-  - &id026
-    name: 🇪🇸_ES_西班牙
-    type: trojan
-    server: sp1.connecton.surf
-    port: 443
-    udp: true
-    password: 41dbabe59a
-    skip-cert-verify: true
-    network: tcp
-  - &id027
-    name: 🇨🇳_CN_中国->🇨🇦_CA_加拿大
-    type: vmess
-    server: zjcm.pmxu.link
-    port: 14809
-    cipher: auto
-    uuid: 18aa87b9-c87b-35a7-8f91-866e881ff277
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id028
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: yd1.992688.xyz
-    port: 8080
-    cipher: auto
-    uuid: bbfa65cf-236e-4e4f-eb3d-a9e159d3f941
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: eu2.992688.xyz
-  - &id029
-    name: 🇺🇸_US_美国_9
-    type: vmess
-    server: 7.wyhkaa0.gq
-    port: 2095
-    cipher: auto
-    uuid: 2f334fd9-98f6-4995-ba45-bb9a8a28eea2
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /TG:@hkaa0
-      headers:
-        host: 7.wyhkaa0.gq
-  - &id030
-    name: 🇺🇸_US_美国_10
-    type: vmess
-    server: 11.wyhkaa0.gq
-    port: 2095
-    cipher: auto
-    uuid: a54fd3bc-3764-40cd-ff5a-471470417eac
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /TG:@hkaa0
-      headers:
-        host: 11.wyhkaa0.gq
-  - &id031
-    name: 🇺🇸_US_美国_11
-    type: vmess
-    server: 6.wyhkaa0.gq
-    port: 2095
-    cipher: auto
-    uuid: 6bbc9554-07bc-47c6-a088-87aa79fd5ca1
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /TG:@hkaa0
-      headers:
-        host: 6.wyhkaa0.gq
+        host: 17.wyhkaa0.gq
 proxy-groups:
   - name: PROXY
     type: select
@@ -431,6 +608,13 @@ proxy-groups:
       - *id029
       - *id030
       - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
+      - *id037
+      - *id038
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -467,6 +651,13 @@ proxy-groups:
       - *id029
       - *id030
       - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
+      - *id037
+      - *id038
   - name: SELECT
     type: select
     proxies:
@@ -501,6 +692,13 @@ proxy-groups:
       - *id029
       - *id030
       - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
+      - *id037
+      - *id038
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
